--- a/cmd/Dockerfile
+++ b/cmd/Dockerfile
@@ -1,2 +1,2 @@
 FROM registry.access.redhat.com/ubi8
-CMD while true; (( i++ )); echo "Hello World \$i"; done 
+CMD while true; do (( i++ )); echo "Hello World \$i"; done 
